fix navigation sidebar (#2180)
* remove tajweed locales

* add script to remove files by name in a folder

* add tajweed colors menu toggle

* add tafkhim, enhance responsiveness, make colors menu open by default

* fix colors menu overlap

* add transition

* add height to useEffect dependancy array

* remove unused css

* fix clientHeight

* address PR comments

* switch base palettes for light and sepia

* fix preview ayah theme

* fix prettierrc

* remove top margins

* Fix context menu height

* fix overlaping sidebar

* fix navigation sidebar

* Fix progress bar

* UI refinement and code refactor

* use css variable

--- a/src/components/QuranReader/ContextMenu.module.scss
+++ b/src/components/QuranReader/ContextMenu.module.scss
@@ -24,7 +24,6 @@ $sections-container-height: 2.25rem;
     transition-timing-function: linear;
     height: var(--spacing-micro);
     background: var(--color-success-deep);
-    position: absolute;
     inset-block-end: calc(-1 * var(--spacing-micro));
   }
 }
